# roff-rs

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  release.toml
.github/: renovate.json5  settings.yml
.github/workflows/: audit.yml  ci.yml  committed.yml  pipeline.yml  pre-commit.yml  rust-next.yml  spelling.yml  template.yml
examples/: demo.rs
src/: lib.rs
tests/: demo.rs  demo.troff
tests/testsuite/: demo.rs  demo.troff
