[package]
name = "roff"
version = "0.2.0"
description = "ROFF (man page format) generation library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-cli/roff-rs"
homepage = "https://github.com/rust-cli/roff-rs"
documentation = "https://docs.rs/roff"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "man", "roff"]
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/roff-rs/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]

[dev-dependencies]
pretty_assertions = "1.0.0"
duct = "0.13"
